# hydra_cifar_playground

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
conf/data/: full.yaml  subset.yaml
scripts/: train.py
src/image_wizard/models/: __init__.py
src/image_wizard/models/architecture/: __init__.py  vanilla_cnn.py
src/image_wizard/models/lightning/: __init__.py  classification_module.py
src/image_wizard/utils/: __init__.py  cifar_datamodule.py  download_data.py
