[project]
name = "image_wizard"
version = "0.1.0"
authors = [
    { name = "Kasia Kedzierska", email = "user.email=31040515+kzkedzierska@users.noreply.github.com" },
]
description = "Playing with Hydra and Image Processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-zen>=0.15.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "omegaconf>=2.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = ["ruff>=0.12.5"]

[tool.ruff]
line-length = 120
target-version = "py311"
